--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,10 @@
     <string name="menos">-</string>
     <string name="mais">+</string>
     <string name="multi">*</string>
-    <string name="dividi">/</string>
+    <string name="divide">/</string>
     <string name="igual">=</string>
     <string name="c">C</string>
+    <string name="modulo">%</string>
+    <string name="ponto">.</string>
+    <string name="back">backspace</string>
 </resources>
